--- a/app/src/main/resources/fxml/MainView.fxml
+++ b/app/src/main/resources/fxml/MainView.fxml
@@ -1,148 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<StackPane fx:id="rootStackPane"
-           maxHeight="-Infinity"
-           maxWidth="-Infinity"
-           minHeight="-Infinity"
-           minWidth="-Infinity"
-           prefHeight="600.0"
-           prefWidth="1050.0"
-           styleClass="white-background,black-text"
-           xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="cc.cc1234.app.controller.MainViewController">
-    <children>
-        <SplitPane fx:id="mainSplitPane" dividerPositions="0.25" prefHeight="160.0" prefWidth="200.0">
+<?import javafx.scene.text.*?>
+
+<BorderPane fx:id="rootStackPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cc.cc1234.app.controller.MainViewController">
+   <center>
+        <SplitPane fx:id="mainSplitPane" dividerPositions="0.01" BorderPane.alignment="CENTER">
             <items>
-                <AnchorPane fx:id="mainLeftPane" styleClass="white-background" minHeight="0.0" minWidth="0.0"
-                            prefHeight="550.0" prefWidth="694.0">
-                    <children>
-                        <VBox fx:id="serverButtons" alignment="TOP_LEFT" prefWidth="40.0" styleClass="main-menu-bar"
-                              spacing="6" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                              AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0">
-                            <children>
-                                <JFXButton fx:id="serverAddButton" mnemonicParsing="false" styleClass="create-button">
-                                    <tooltip>
-                                        <Tooltip text="%main.menuBar.new"/>
-                                    </tooltip>
-                                </JFXButton>
-                                <MenuButton fx:id="configMenuButton" mnemonicParsing="false"
-                                            styleClass="setting-button">
-                                    <tooltip>
-                                        <Tooltip text="%main.menuBar.config"/>
-                                    </tooltip>
-                                    <items>
-                                        <MenuItem fx:id="exportMenuItem" mnemonicParsing="false"
-                                                  text="%main.menuBar.config.export">
-                                            <graphic>
-                                                <Label styleClass="export-icon"/>
-                                            </graphic>
-                                        </MenuItem>
-                                        <MenuItem fx:id="importMenuItem" mnemonicParsing="false"
-                                                  text="%main.menuBar.config.import">
-                                            <graphic>
-                                                <Label styleClass="import-icon"/>
-                                            </graphic>
-                                        </MenuItem>
-                                        <MenuItem fx:id="zookeeperPropsMenuItem" mnemonicParsing="false"
-                                                  text="%main.menuBar.config.zookeeper-prop">
-                                            <graphic>
-                                                <Label styleClass="zk-icon"/>
-                                            </graphic>
-                                        </MenuItem>
-                                        <Menu fx:id="fontSizeMenu"
-                                              text="%main.menuBar.font">
-                                            <graphic>
-                                                <Label styleClass="font-size-icon"/>
-                                            </graphic>
-                                            <items>
-                                                <MenuItem fx:id="fontSizeMenuItem">
-                                                    <graphic>
-                                                        <JFXSlider fx:id="fontSizeSlider" min="8" max="25" value="12">
-                                                        </JFXSlider>
-                                                    </graphic>
-                                                </MenuItem>
-                                            </items>
-                                        </Menu>
-                                        <Menu fx:id="langMenu" text="%main.menuBar.config.lang">
-                                            <graphic>
-                                                <Label styleClass="lang-icon"/>
-                                            </graphic>
-                                        </Menu>
-                                        <MenuItem fx:id="resetMenuItem" text="%main.menuBar.config.reset">
-                                            <graphic>
-                                                <Label styleClass="reset-icon"/>
-                                            </graphic>
-                                        </MenuItem>
-                                    </items>
-                                </MenuButton>
-                                <JFXButton fx:id="logsButton" mnemonicParsing="false" styleClass="logs-button">
-                                    <tooltip>
-                                        <Tooltip text="%main.menuBar.logs"/>
-                                    </tooltip>
-                                </JFXButton>
-                                <JFXButton fx:id="darkModeSwitchButton"
-                                           mnemonicParsing="false"
-                                           styleClass="dark-mode-icon">
-                                    <tooltip>
-                                        <Tooltip text="%main.menuBar.dark-mode.tooltip"/>
-                                    </tooltip>
-                                </JFXButton>
-                                <JFXButton fx:id="checkUpdateButton"
-                                           mnemonicParsing="false"
-                                           styleClass="check-update-button">
-                                    <tooltip>
-                                        <Tooltip text="%main.menuBar.check-update.tooltip"/>
-                                    </tooltip>
-                                </JFXButton>
-                            </children>
-                            <padding>
-                                <Insets left="10.0" top="6.0"/>
-                            </padding>
-                        </VBox>
-                        <ListView fx:id="serverListView"
-                                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="50.0"
-                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
+            <StackPane maxWidth="320.0" minWidth="128.0" prefWidth="200.0" styleClass="white-background">
+               <children>
+                        <ListView fx:id="serverListView" prefWidth="200.0">
                         </ListView>
-                    </children>
-                </AnchorPane>
+               </children>
+            </StackPane>
                 <StackPane fx:id="mainRightPane" styleClass="white-background">
                     <children>
                         <AnchorPane StackPane.alignment="CENTER">
                             <children>
-                                <Label fx:id="prettyZooLabel" alignment="CENTER" contentDisplay="CENTER"
-                                       prefHeight="160.0" prefWidth="199.0"
-                                       styleClass="prettyZoo" AnchorPane.bottomAnchor="300.0"
-                                       AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                       AnchorPane.topAnchor="50.0"/>
-                                <Hyperlink fx:id="prettyZooLink" alignment="CENTER"
-                                           contentDisplay="CENTER"
-                                           layoutX="232.0"
-                                           layoutY="303.0"
-                                           text="https://github.com/vran-dev/PrettyZoo"
-                                           AnchorPane.bottomAnchor="200.0"
-                                           AnchorPane.leftAnchor="0.0"
-                                           AnchorPane.rightAnchor="0.0"
-                                           AnchorPane.topAnchor="250.0">
+                                <Label fx:id="prettyZooLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="160.0" prefWidth="199.0" styleClass="prettyZoo" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+                                <Hyperlink fx:id="prettyZooLink" alignment="CENTER" contentDisplay="CENTER" layoutX="232.0" layoutY="303.0" text="https://github.com/vran-dev/PrettyZoo" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0">
                                     <font>
-                                        <Font size="17.0"/>
+                                        <Font size="17.0" />
                                     </font>
                                 </Hyperlink>
                             </children>
                             <StackPane.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </StackPane.margin>
                         </AnchorPane>
                     </children>
                     <padding>
-                        <Insets right="30" left="30" bottom="30" top="30"/>
+                        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                     </padding>
                 </StackPane>
             </items>
         </SplitPane>
-    </children>
-</StackPane>
+   </center>
+   <left>
+            <VBox fx:id="serverButtons" alignment="TOP_CENTER" minWidth="60.0" prefWidth="60.0" spacing="6" styleClass="main-menu-bar" BorderPane.alignment="CENTER">
+                <children>
+                    <JFXButton fx:id="serverAddButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="create-button">
+                        <tooltip>
+                            <Tooltip text="%main.menuBar.new" />
+                        </tooltip>
+                    </JFXButton>
+                    <MenuButton fx:id="configMenuButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="setting-button">
+                        <tooltip>
+                            <Tooltip text="%main.menuBar.config" />
+                        </tooltip>
+                        <items>
+                            <MenuItem fx:id="exportMenuItem" mnemonicParsing="false" text="%main.menuBar.config.export">
+                                <graphic>
+                                    <Label styleClass="export-icon" />
+                                </graphic>
+                            </MenuItem>
+                            <MenuItem fx:id="importMenuItem" mnemonicParsing="false" text="%main.menuBar.config.import">
+                                <graphic>
+                                    <Label styleClass="import-icon" />
+                                </graphic>
+                            </MenuItem>
+                            <MenuItem fx:id="zookeeperPropsMenuItem" mnemonicParsing="false" text="%main.menuBar.config.zookeeper-prop">
+                                <graphic>
+                                    <Label styleClass="zk-icon" />
+                                </graphic>
+                            </MenuItem>
+                            <Menu fx:id="fontSizeMenu" text="%main.menuBar.font">
+                                <graphic>
+                                    <Label styleClass="font-size-icon" />
+                                </graphic>
+                                <items>
+                                    <MenuItem fx:id="fontSizeMenuItem">
+                                        <graphic>
+                                            <JFXSlider fx:id="fontSizeSlider" max="25" min="8" value="12">
+                                                        </JFXSlider>
+                                        </graphic>
+                                    </MenuItem>
+                                </items>
+                            </Menu>
+                            <Menu fx:id="langMenu" text="%main.menuBar.config.lang">
+                                <graphic>
+                                    <Label styleClass="lang-icon" />
+                                </graphic>
+                            </Menu>
+                            <MenuItem fx:id="resetMenuItem" text="%main.menuBar.config.reset">
+                                     <graphic>
+                                    <Label styleClass="reset-icon" />
+                                </graphic>
+                            </MenuItem>
+                        </items>
+                    </MenuButton>
+                    <JFXButton fx:id="logsButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="logs-button">
+                        <tooltip>
+                            <Tooltip text="%main.menuBar.logs" />
+                        </tooltip>
+                    </JFXButton>
+                    <JFXButton fx:id="darkModeSwitchButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="dark-mode-icon">
+                        <tooltip>
+                            <Tooltip text="%main.menuBar.dark-mode.tooltip" />
+                        </tooltip>
+                    </JFXButton>
+                    <JFXButton fx:id="checkUpdateButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="check-update-button">
+                        <tooltip>
+                            <Tooltip text="%main.menuBar.check-update.tooltip" />
+                        </tooltip>
+                    </JFXButton>
+                </children>
+                <padding>
+                    <Insets left="10.0" right="10.0" top="6.0" />
+                </padding>
+            </VBox>
+   </left>
+</BorderPane>
