--- a/app/src/main/resources/fxml/ServerView.fxml
+++ b/app/src/main/resources/fxml/ServerView.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="serverInfoPane" prefHeight="520.0" prefWidth="650.0" styleClass="white-background" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cc.cc1234.app.controller.ServerViewController">
-    <children>
-        <GridPane fx:id="serverBasicInfoPane" hgap="20.0" prefWidth="650.0" vgap="10.0">
+<AnchorPane fx:id="serverInfoPane" styleClass="white-background" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cc.cc1234.app.controller.ServerViewController">
+   <children>
+        <GridPane fx:id="serverBasicInfoPane" hgap="20.0" prefWidth="650.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="240.0" prefWidth="650.0" />
             </columnConstraints>
@@ -20,7 +20,7 @@
             <RowConstraints />
             </rowConstraints>
 
-            <HBox spacing="30" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                        <HBox spacing="30" GridPane.columnIndex="0" GridPane.rowIndex="0">
                 <VBox spacing="30">
                     <HBox spacing="10">
                         <JFXTextField fx:id="zkHost" labelFloat="false" prefHeight="26.0" prefWidth="160.0" promptText="zookeeper host" />
@@ -32,7 +32,7 @@
                 <JFXTextArea fx:id="aclTextArea" prefHeight="78.0" prefWidth="240.0" styleClass="acl-textarea" />
             </HBox>
 
-            <HBox spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                        <HBox spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="2">
                 <padding>
                     <Insets left="5.0" right="5.0" />
                 </padding>
@@ -42,7 +42,7 @@
                 </children>
             </HBox>
 
-            <JFXTabPane fx:id="extendConfigTabPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                        <JFXTabPane fx:id="extendConfigTabPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300" GridPane.columnIndex="0" GridPane.rowIndex="3">
                 <Tab fx:id="tunnelConfigTab" text="SSH Tunnel">
                     <GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="618.0" vgap="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="10.0">
                         <columnConstraints>
@@ -71,29 +71,29 @@
                                         <children>
                                             <JFXTextField fx:id="sshServer" maxHeight="-Infinity" prefWidth="144.0" promptText="ssh server" />
 
-                                            <Label prefHeight="23.0" styleClass="black-text" text=":" />
+                                                        <Label prefHeight="23.0" styleClass="black-text" text=":" />
                                             <JFXTextField fx:id="sshServerPort" alignment="CENTER" maxHeight="-Infinity" prefWidth="60.0" promptText="port" />
                                         </children>
                                     </HBox>
 
-                                    <JFXTextField fx:id="sshUsername" maxWidth="-Infinity" prefWidth="206" promptText="%server.input.ssh.username.prompt" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                                                <JFXTextField fx:id="sshUsername" maxWidth="-Infinity" prefWidth="206" promptText="%server.input.ssh.username.prompt" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                                     <HBox GridPane.columnIndex="0" GridPane.rowIndex="3">
                                         <JFXPasswordField fx:id="sshPassword" prefWidth="172.0" promptText="%server.input.ssh.password.prompt" />
 
-                                        <JFXButton fx:id="sshPasswordVisibleButton" prefWidth="34.0" styleClass="visible-button" text="visible" />
+                                                    <JFXButton fx:id="sshPasswordVisibleButton" prefWidth="34.0" styleClass="visible-button" text="visible" />
                                     </HBox>
                                     <HBox GridPane.columnIndex="0" GridPane.rowIndex="4">
                                         <JFXTextField fx:id="sshKeyFileField" editable="true" maxWidth="-Infinity" prefWidth="172" promptText="%server.input.ssh.key-file.prompt" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                                         <JFXButton fx:id="sshKeyFileClearButton" prefWidth="34.0" styleClass="clear-button" />
                                     </HBox>
 
-                                </children>
+                                            </children>
                                 <padding>
                                     <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                 </padding>
                             </GridPane>
 
-                            <ProgressBar fx:id="sshTunnelProgressBarTo" prefHeight="16.0" prefWidth="75.0" progress="0.0" GridPane.columnIndex="1" />
+                                        <ProgressBar fx:id="sshTunnelProgressBarTo" prefHeight="16.0" prefWidth="75.0" progress="0.0" GridPane.columnIndex="1" />
                             <AnchorPane prefHeight="246.0" prefWidth="272.0" style="-fx-border-color: #ddd;" GridPane.columnIndex="2">
                                 <children>
                                     <JFXTextField fx:id="remoteServer" layoutX="33.0" layoutY="73.0" prefHeight="23.0" prefWidth="80.0" promptText="%server.input.ssh.remote-server.prompt" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="72.0" />
@@ -132,7 +132,7 @@
                 </Tab>
             </JFXTabPane>
 
-            <HBox fx:id="buttonHBox" alignment="CENTER_RIGHT" minHeight="30.0" spacing="10.0" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                        <HBox fx:id="buttonHBox" alignment="CENTER_RIGHT" minHeight="30.0" spacing="10.0" GridPane.columnIndex="0" GridPane.rowIndex="4">
                 <JFXButton fx:id="saveButton" mnemonicParsing="false" styleClass="v-button" text="%server.button.save" />
                 <JFXButton fx:id="connectButton" mnemonicParsing="false" styleClass="v-button" text="%server.button.connect" />
                 <JFXButton fx:id="deleteButton" mnemonicParsing="false" styleClass="v-button" text="%server.button.delete" />
@@ -142,7 +142,6 @@
             </padding>
         </GridPane>
 
-        <JFXButton fx:id="closeButton" layoutX="620.0" layoutY="14.0" mnemonicParsing="false" styleClass="v-button" text="X" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="10.0" />
-
-    </children>
+                    <JFXButton fx:id="closeButton" mnemonicParsing="false" styleClass="v-button" text="×" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+   </children>
 </AnchorPane>
