--- a/app/src/main/resources/assets/css/default/style.css
+++ b/app/src/main/resources/assets/css/default/style.css
@@ -574,7 +574,7 @@
 /*server list item */
 .server-item-select {
     -fx-background-color: #444444;
-    -fx-border-color: #DDD;
+    -fx-border-color: #444444;
     -fx-border-width: 1 1 1 1;
     -fx-border-radius: 8;
     -fx-background-radius: 8;
@@ -595,7 +595,7 @@
 }
 
 .server-item:hover {
-    -fx-effect: dropshadow(three-pass-box, #dcdcdc, 8, 0.3, 1.8, 1.8);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 8, 0.2, 1.8, 1.8);
 }
 
 .server-progress-indicator {
@@ -750,12 +750,18 @@
 }
 
 /* context menu */
+/* context menu */
 .context-menu {
     -fx-background-color: #FFF;
     -fx-border-color: #DDD;
     -fx-border-width: 1 1 1 1;
     -fx-border-radius: 8;
     -fx-background-radius: 8;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 8, 0.2, 1.8, 1.8);
+}
+
+.context-menu .menu-item {
+    -fx-padding: 0; /* 可选，自己定义内容的内边距 */
 }
 
 .context-menu .menu-item .text {
